# FaceLift

cmake/: faceliftMacros.cmake
codegen/facelift/templates/: QMLFrontend.template.h
src/ipc/: CMakeLists.txt
src/ipc/dbus/: CMakeLists.txt
src/model/: FaceliftModel.h  QMLFrontend.cpp  QMLFrontend.h
